--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "danorak.github.io",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://danorak.github.io",
   "dependencies": {
+    "gh-pages": "^1.1.0",
     "grid-styled": "^4.0.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
@@ -11,6 +13,8 @@
     "styled-system": "^2.2.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
